unpackaged/main/default/objects/Product2/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Whitepapers</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
            <value>
                <fullName>Reprints</fullName>
            </value>
            <value>
                <fullName>List Rentals</fullName>
            </value>
            <value>
                <fullName>Reports/Survey</fullName>
            </value>
            <value>
                <fullName>Key Word</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Directory Listing</fullName>
            </value>
            <value>
                <fullName>Job Listing</fullName>
            </value>
            <value>
                <fullName>Newsletter Sponsorships</fullName>
            </value>
            <value>
                <fullName>Webcast Sponsorships</fullName>
            </value>
            <value>
                <fullName>CPE Webcasts</fullName>
            </value>
            <value>
                <fullName>CPE Self Study</fullName>
            </value>
            <value>
                <fullName>Event Listings</fullName>
            </value>
            <value>
                <fullName>Event Newsletter Sponsorships</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>