unpackaged/main/default/objects/Product2/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>if(ispickval(Account_Name__c,"Display"),"1001",if(ispickval(Account_Name__c,"Inserts"),"1010",if(ispickval(Account_Name__c,"Whitepapers"),"1256",if(ispickval(Account_Name__c,"Supplements"),"1106",if(ispickval(Account_Name__c,"Reprints"),"1169",if(ispickval(Account_Name__c,"List Rentals"),"1120",if(ispickval(Account_Name__c,"Reports/Survey"),"1107",if(ispickval(Account_Name__c,"Key Word"),"1082",if(ispickval(Account_Name__c,"Banner"),"1071",if(ispickval(Account_Name__c,"Direct Email"),"1120",if(ispickval(Account_Name__c,"Directory Listing"),"1207",if(ispickval(Account_Name__c,"Job Listing"),"1049",if(ispickval(Account_Name__c,"Newsletter Sponsorships"),"1016",if(ispickval(Account_Name__c,"Webcast Sponsorships"),"1418",if(ispickval(Account_Name__c,"Event Listings"),"1045",if(ispickval(Account_Name__c,"Event Newsletter Sponsorships"),"1016",if(ispickval(Account_Name__c,"Event Sponsorship"),"1340",if(ispickval(Account_Name__c,"Other"),"1115",""))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>