unpackaged/main/default/objects/Product2/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <description>Used in budget reporting</description>
    <label>Budget Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>