unpackaged/main/default/objects/Product2/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>