unpackaged/main/default/objects/Product2/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>