unpackaged/main/default/objects/Product2/fields/Min_Users__c.field-meta.xml
<CustomField>
    <fullName>Min_Users__c</fullName>
    <label>Min. Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>