unpackaged/main/default/objects/Product2/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>