unpackaged/main/default/objects/Product2/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <formula>if(ispickval(Family,"Print"),"52602",if(ispickval(Family,"Online"),"52603",if(ispickval(Family,"Event"),"52604","")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order</label>
    <type>Text</type>
</CustomField>