unpackaged/main/default/objects/Product2/recordTypes/Advertising.recordType-meta.xml
<RecordType>
    <fullName>Advertising</fullName>
    <active>true</active>
    <label>Advertising</label>
</RecordType>