unpackaged/main/default/objects/Product2/recordTypes/Auxillary_Products.recordType-meta.xml
<RecordType>
    <fullName>Auxillary_Products</fullName>
    <active>true</active>
    <label>Auxillary Products</label>
</RecordType>