unpackaged/main/default/objects/Product2/recordTypes/Data_Sales_Product.recordType-meta.xml
<RecordType>
    <fullName>Data_Sales_Product</fullName>
    <active>true</active>
    <label>Data Sales Product</label>
</RecordType>