unpackaged/main/default/objects/Product2/recordTypes/Registrations.recordType-meta.xml
<RecordType>
    <fullName>Registrations</fullName>
    <active>true</active>
    <description>Live-event registration.</description>
    <label>Registrations</label>
</RecordType>