unpackaged/main/default/objects/Product2/recordTypes/Subscription.recordType-meta.xml
<RecordType>
    <fullName>Subscription</fullName>
    <active>true</active>
    <description>Subscription based Products</description>
    <label>Subscription</label>
</RecordType>