unpackaged/main/default/objects/Product2/listViews/All_Subscriptions_Family_Products.listView-meta.xml
<ListView>
    <fullName>All_Subscriptions_Family_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>HAS_DEF_REV_SCHEDULE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Subscriptions</value>
    </filters>
    <label>All -Subscriptions Family Products</label>
</ListView>