unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Account_Name__c</columns>
    <columns>Invoice__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>